# iphone-backup-viewer

./: .gitignore  README.md  meson.build
include/: iphone-backup-viewer.h  util.h
src/: backup.c  contacts.c  main.c  meson.build  util.c
subprojects/: argparse.wrap  c-log.wrap  plist.wrap
subprojects/packagefiles/plist/: meson.build
